--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
-	<title>Plan With Love</title>
+	<title>Plan With Us</title>
 </head>
 
 <body>
